<resources>
    <string name="app_name">Display Face List</string>
    <string name="detect">Detect</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="facial_hair">Facial Hair:</string>
    <string name="smile">Smile:</string>
    <string name="headpose">Headpose:</string>
    <string name="todo">TODO</string>
    <string name="subscription_key">cddd555561a64adf8342ae934e9c3f79</string>
    <string name="endpoint">https://vineelmathew.cognitiveservices.azure.com/</string>
    <string name="from_gallery">From Gallery</string>
    <string name="play_video">play_video</string>
</resources>
